# wp4-aud_manager

./: .pre-commit-config.yaml  Dockerfile  README.md  aud_control.sh  docker-compose.yml  local_run.sh  pyproject.toml  test_aud_manager.py
.github/workflows/: docker-publish.yml  wp4-aud_manager.yml
.reuse/: dep5
aud_manager/: aud.py  aud_conn.py  aud_endpoint.py  aud_file.py  aud_manager.py  packetreader.py
aud_manager/data_intake_modules/: nflog_connector.py
aud_manager/data_intake_modules/nflog_connector/: Makefile  nflog.c  rules.sh
aud_sensor/: README.md  aud.py  aud_conn.py  aud_sensor.py  packetreader.py
docker-files/: Dockerfile-aud_manager  Dockerfile-aud_sensor
modules/: nflog_connector.py
modules/nflog_connector/: nflog.c
tools/: post_receiver.py  websocket_sink.py
virtual_test_devices/mock_sensor/: Dockerfile  mock.sh
virtual_test_devices/mock_service/: Dockerfile
