[tool.poetry]
name = "wp4-aud_manager"
version = "0.1"
description = "Anomaly detection analytic for WP4 analytics toolbox."
authors = [""]
repository = "https://github.com/sifis-home/wp4-aud_manager"
license = "MIT"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["README.md", "LICENSES/MIT.txt"]
packages = [
    { include = "aud_manager" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
docker = "^6.1.3"
websocket-client = "1.4.2"
pytest = "7.4.0"
flask = "2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.63"
coverage = {extras = ["toml"], version = "^7.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
select = [
    "F401",
    "F403",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 60
